--- a/_site.yml
+++ b/_site.yml
@@ -14,6 +14,7 @@ navbar:
 base_url: Cyril.github.io/Cyril_blog/
 collections:
     posts:
+      disqus: cyril-blog-1
       share: [twitter, linkedin, facebook]
       #disqus: 
 output:
